# argonath

./: .gitignore  Cargo.toml  docker-compose.yml  justfile  sealed-secrets.yaml
.sqlx/: query-4c4ff68a7b8296b3d98dc35d10055bea64a00b17c4f89555afdfc9f993835c5e.json  query-7952af74184e9ca7b593aa29d19be7b447c3c83b1d74bf931452886b88373be4.json  query-b2b1ed6f0aeae528a3667f1598a930197650bb41b6e8c1078f060c6efd13bd83.json
graphql/: project_query.graphql
migrations/: 20250420193600_create-sessions.sql
src/: app.rs  controller.rs  controllers.rs  extractors.rs  github.rs  main.rs  model.rs  repository.rs  routes.rs  secrets.rs
templates/: base.html  login.html
