[package]
name = "argonath"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = { version = "0.13.1", features = ["serde_json"] }
axum = { version = "0.8.3", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
