[package]
name = "argonath"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = { version = "0.13.1", features = ["serde_json"] }
axum = { version = "0.8.3", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
base64 = "0.22.1"
chrono = { version = "0.4.40", features = ["serde"] }
rand = "0.9.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
sqlx = { version = "0.8.5", features = [
  "postgres",
  "runtime-tokio-native-tls",
  "uuid",
  "time",
  "chrono",
] }
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
